[project]
name = "code-debugger"
version = "0.1.0"
description = "Multi-agent debugging system using OpenAI Agents SDK for root cause analysis and automated fixing"
readme = "README.md"
authors = [
    { name = "waleed260", email = "vkdeku20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.1.0",
    "psutil>=5.9.0",
    "pylint>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
code-debugger = "code_debugger:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
