[project]
name = "code-debugger"
version = "2.0.0"
description = "Autonomous multi-language AI debugging platform with 10 specialized agents, execution sandbox, and autonomous repair loop"
readme = "README.md"
authors = [
    { name = "waleed260", email = "vkdeku20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Web framework (V2)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # LLM / Agents
    "openai>=1.0.0",
    "openai-agents>=0.1.0",

    # Web (V1 compatibility)
    "flask>=3.0.0",
    "flask-cors>=4.0.0",

    # System
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",

    # Code analysis
    "pylint>=3.0.0",

    # Validation
    "pydantic>=2.0.0",

    # Async
    "httpx>=0.27.0",
]

[project.scripts]
code-debugger = "code_debugger:main"
code-debugger-v2 = "code_debugger.orchestrator_v2:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test_v2_pipeline.py", "test_agents.py", "test_infrastructure.py", "test_openai_agents.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
